syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscoding";
import "Protos/google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

//package Comments;

service CommentsService {
  rpc GetCommentById(GetCommentByIdRequest) returns (GetCommentByIdResponse) {
	option (google.api.http) = {
        get: "/comments/id"
    };
  }

  rpc GetAllComments(GetAllCommentsRequest) returns (GetAllCommentsResponse) {
    option (google.api.http) = {
        get: "/comments/all"
    };
  }

  rpc GetCommentByBlogId(GetCommentByBlogIdRequest) returns (GetCommentByBlogIdResponse) {
    option (google.api.http) = {
        get: "/comments/blogId"
    };
  }

  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse) {
    option (google.api.http) = {
        post: "/comments"
        body: "*"
    };
  }

  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse) {
    option (google.api.http) = {
        delete: "/comments"
    };
  }

  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse) {
    option (google.api.http) = {
        put: "/comments"
        body: "*"
    };
  }
}

message Comment {
  int32 id = 1;
  int32 authorId = 2;
  int32 blogId = 3;
  string text = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

message GetCommentByIdRequest {
  string ID = 1;
}

message GetCommentByIdResponse {
  Comment comment = 1;
}

message GetAllCommentsRequest {
}

message GetAllCommentsResponse {
  repeated Comment comments = 1;
}

message GetCommentByBlogIdRequest {
  string BlogId = 1;
}

message GetCommentByBlogIdResponse {
  repeated Comment comments = 1;
}

message CreateCommentRequest {
  Comment comment = 1;
}

message CreateCommentResponse {
}

message DeleteCommentRequest {
  string ID = 1;
}

message DeleteCommentResponse {
}

message UpdateCommentRequest {
  Comment comment = 1;
}

message UpdateCommentResponse {
}
